feat: integrate Dolos
